syntax = "proto3";
import "event.proto";
package user;

option go_package = "src/proto";

service UserService {
  rpc FindOne(FindOneUserRequest) returns (FindOneUserResponse){}
  rpc FindByStudentID(FindByStudentIDUserRequest) returns(FindByStudentIDUserResponse) {}
  rpc Create(CreateUserRequest) returns (CreateUserResponse){}
  rpc Update(UpdateUserRequest) returns (UpdateUserResponse){}
  rpc Verify(VerifyUserRequest) returns (VerifyUserResponse){}
  rpc Delete(DeleteUserRequest) returns (DeleteUserResponse){}
  rpc CreateOrUpdate(CreateOrUpdateUserRequest) returns (CreateOrUpdateUserResponse){}
  rpc ConfirmEstamp(ConfirmEstampRequest) returns (ConfirmEstampResponse){}
  rpc GetUserEstamp(GetUserEstampRequest) returns (GetUserEstampResponse){}
}

message User{
  string id = 1;
  string title = 2;
  string firstname = 3;
  string lastname = 4;
  string nickname = 5;
  string studentID = 6;
  string faculty = 7;
  string year = 8;
  string phone = 9;
  string lineID = 10;
  string email = 11;
  string allergyFood = 12;
  string foodRestriction = 13;
  string allergyMedicine = 14;
  string disease = 15;
  string imageUrl = 16;
  bool canSelectBaan = 17;
  bool isVerify = 18;
  string baanId = 19;
  bool isGotTicket = 20;
}

// FindOne

message FindOneUserRequest{
  string id = 1;
}

message FindOneUserResponse{
  User user = 1;
}

// Find By Student ID

message FindByStudentIDUserRequest{
  string studentId = 1;
}

message FindByStudentIDUserResponse{
  User user = 1;
}

// Create

message CreateUserRequest{
  User user = 1;
}

message CreateUserResponse{
  User user = 1;
}

// Update

message UpdateUserRequest{
  string id = 1;
  string title = 2;
  string firstname = 3;
  string lastname = 4;
  string nickname = 5;
  string phone = 6;
  string lineID = 7;
  string email = 8;
  string allergyFood = 9;
  string foodRestriction = 10;
  string allergyMedicine = 11;
  string disease = 12;
}

message UpdateUserResponse{
  User user = 1;
}

// Delete

message DeleteUserRequest{
  string id = 1;
}

message DeleteUserResponse{
  bool success = 1;
}

// Create or Update

message CreateOrUpdateUserRequest{
  User user = 1;
}

message CreateOrUpdateUserResponse{
  User user = 1;
}

// Verify

message VerifyUserRequest{
  string studentId = 1;
  string verifyType = 2;
}

message VerifyUserResponse{
  bool success = 1;
}

// ConfirmEstamp
message ConfirmEstampRequest {
  string uId = 1;
  string eId = 2;
}

message ConfirmEstampResponse {

}

// GetUserEstamp
message GetUserEstampRequest {
  string uId = 1;
}

message GetUserEstampResponse {
  repeated event.Event eventList = 1;
}